--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,36 @@
-html{
+html {
   background-color: #f2f1ed;
   font-family: Georgia, serif;
   line-height: 1.5;
 }
-h1{
+
+h1 {
   color: aquamarine
 }
+
 img{
     width: 100%;
 }
-h1,h2{
+
+h1, h2 {
     color: #5d4832;
     text-transform: uppercase;
     font-family: 'Patua One', cursive;
 }
 
-figcaption{
+figcaption {
     font-size: .8rem;
     font-style: italic;
     text-align: center;
 }
-nav{
+
+nav {
     font-size: 1.125rem;
     font-weight: bold;
-    font-family: 'Patua One', cursive;
+    font-family: 'Patua One', sans-serif;
 }
-nav ol{
+
+nav ol {
     list-style-type: none;
 }
 
@@ -33,7 +38,8 @@ nav a:hover {
     color: #b42885;
     text-decoration: underline;
 }
-.intro{
+
+.intro {
     font-size: 1rem;
 }
 
