--- a/css/main.css
+++ b/css/main.css
@@ -4,43 +4,42 @@ html {
   line-height: 1.5;
 }
 
-h1 {
-  color: aquamarine
-}
-
-img{
-    width: 100%;
+img {
+  width: 100%;
 }
 
 h1, h2 {
-    color: #5d4832;
-    text-transform: uppercase;
-    font-family: 'Patua One', cursive;
+  color: #5d8432;
+  text-transform: uppercase;
+  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
-    font-size: .8rem;
-    font-style: italic;
-    text-align: center;
+  font-size: .8rem;
+  font-style: italic;
+  text-align: center;
 }
 
 nav {
-    font-size: 1.125rem;
-    font-weight: bold;
-    font-family: 'Patua One', sans-serif;
+  font-size: 1.125rem;
+  font-weight: bold;
+  font-family: "Patua One", sans-serif;
 }
 
 nav ol {
-    list-style-type: none;
+  list-style-type: none;
+}
+
+nav a {
+    color: #793284;
+    text-decoration: none;
 }
 
 nav a:hover {
-    color: #b42885;
-    text-decoration: underline;
+  color: #b42885;
+  text-decoration: underline;
 }
 
 .intro {
-    font-size: 1rem;
+  font-size: 1rem;
 }
-
-
